package com.donatrack.donaciones.dominio;

public enum TipoPersonaJuridica {
    GUBERNAMENTAL,
    ONG,
    EMPRESA,
    INSTITUCION
}
