package com.donatrack.donaciones.dominio.contacto;

public enum TipoMedioContacto {
    EMAIL,
    TELEFONO,
    WHATSAPP
}
