package ar.utn.donatrack.donaciones.model.donacion;

public enum EstadoDonacion {
    PENDIENTE_ASIGNACION,
    ASIGNADA,
    EN_ENTREGA,
    ENTREGADA,
    VENCIDA
}
