package ar.utn.donatrack.donaciones.model.donante;

public enum Genero {
    MASCULINO,
    FEMENINO,
    NO_BINARIO,
    OTRO,
    PREFIERO_NO_DECIR
}
