package ar.utn.donatrack.donaciones.model.entidad;

public enum Periodicidad {
    SEMANAL,
    MENSUAL,
    CUATRIMESTRAL,
    ANUAL
}