@startuml diagrama-De-Clases

class Categoria{
  - subcategorias: List<Subcategoria>
}

class Subcategoria{
  - idCategoria: Int
  - tipo : String
}

enum TipoMedioContacto{
    EMAIL
    TELEFONO
    WHATSAPP
}

class Bien{
    - idBien: Int;
    - subcategoria: Subcategoria;
    - descripcion: String;
    - foto: String; 
    - cantidad: Int;
    - unidad: String; 
}

class BienConEstado{
    - esNuevo: Boolean;
}

class BienPerecible{
    - fechaVencimiento: LocalDate;
}

class CargaDonacion{
    - idCargaDonacion: Int;
    - descripcionGeneral: String;
    - donante: PersonaDonante;
    - fechaIngreso: LocalDate;
    - bienes:  List<Bien>;
}

class Donacion{
    - subcategoria: Subcategoria;
    - estado: EstadoDonacion;
    - idCargaDonacion: Int;
    - bienes:  List<Bien>;
}

class DonacionConEstado{
    - esNuevo: Boolean;
}

class DonacionPerecible{
    - fechaVencimiento: LocalDate;
}

enum EstadoDonacion{
    PENDIENTE_ASIGNACION
    ASIGNADA
    EN_ENTREGA
    ENTREGADA
    VENCIDA
}

enum EstadoDonante{
    ACTIVO
    INACTIVO
}

enum Genero{
    MASCULINO
    FEMENINO
    NO_BINARIO
    OTRO
    PREFIERO_NO_DECIR
}

class PersonaDonante{
    - id : UUID;
    - tipoPersona : String;
    - tipoDocumento : String; 
    - numeroDocumento : String;
    - mediosDeContacto : List<TipoMedioContacto>;
    - cargaDonacion : CargaDonacion;
    - direccion : Direccion;
    - email: String;
    - telefono: String;
    - medioContactoPredeterminado: TipoMedioContacto;
    - estado: EstadoDonante;
    - donaciones: List<Donacion>
}

class PersonaHumanaDonante{
    - nombre: String;
    - apellido: String;
    - edad: Int;
    - genero: Genero;
}

class PersonaJuridicaDonante{
    - razonSocial: Strring;
    - tipo : TipoPersonaJuridica;
    - rubro: String;
    - representantes : List<Representante>; 
}

class Representante{
    - nombre: String;
    - apellido: String;
    - email: String;
    - telefono: String;
}

enum TipoPersonaJuridica {
    GUBERNAMENTAL,
    ONG,
    EMPRESA,
    INSTITUCION
}

class Direccion{
    - calle: String;
    - numero: Int;
    - localidad: String;
    - provincia: String;
    - codigoPostal: String;
}

class EntidadBeneficiaria{
    - id: Int;
    - razonSocial: String;
    - direccion: Direccion;
    - telefono: String;
    - correosRepresentatnes: List<String>;
    - necesidades: List<Necesidad>;

    + registrarNecesidad(Necesidad necesidad): void;
}

class Necesidad{
    - id: Int;
    - subcategoria: Subcategoria;
    - descripcion: String;
    - cantidadObjetivo: Int;
    - cantidadRecibida: Int;

    + recibirDonacion(int cantidad): void;
    + estaSatisfecha(): Boolean;
}

class NecesidadExtraordinaria{

}

class NecesidadRecurrente{
    - periodo: Periodicidad;
    - fechaInicioPeriodo;

    + reiniciarPeriodo(): void;
    + requiereReinicio(LocalDate fechaActual): Boolean;
}

enum Periodicidad{
    SEMANAL,
    MENSUAL,
    CUATRIMESTRAL,
    ANUAL
}

Bien <|-- BienConEstado
Bien <|-- BienPerecible
Donacion <|-- DonacionConEstado
Donacion <|-- DonacionPerecible
PersonaDonante <|-- PersonaHumanaDonante
PersonaDonante <|-- PersonaJuridicaDonante
Necesidad <|-- NecesidadExtraordinaria
Necesidad <|-- NecesidadRecurrente

NecesidadRecurrente -- Periodicidad

PersonaDonante -- TipoMedioContacto
PersonaDonante --* CargaDonacion
PersonaDonante --* Direccion
PersonaDonante --* Donacion
PersonaDonante -- EstadoDonante

PersonaJuridicaDonante -- TipoPersonaJuridica
PersonaJuridicaDonante --* Representante

PersonaHumanaDonante -- Genero

EntidadBeneficiaria --* Necesidad
EntidadBeneficiaria --* Direccion

Categoria --* Subcategoria
Subcategoria *-- Bien

Donacion --* Bien
Donacion -- EstadoDonacion
Donacion -- Subcategoria

CargaDonacion --* Bien

Necesidad -- Subcategoria

@enduml